tests/NormalTests/paczka1/fuzzy1/71932788.err
Error in line 8: 44NKJdUUoXf A2 51,9
Error in line 9: 44NKJdUUoXf A815 85,7
Error in line 27: LcnDTFcRF A304 28,8
